--- a/sweden.html
+++ b/sweden.html
@@ -69,23 +69,23 @@
  </div>
 
  <div class="countries">
-  <a href="sweden.html" class="active">🇸🇪</a>
-  <a href="uk.html">🇬🇧</a>
+  <a href="sweden.html">🇸🇪</a>
   <a href="hungary.html">🇭🇺</a>
-  <a href="france.html">🇫🇷</a>
+  <a href="uk.html">🇬🇧</a>
   <a href="usa.html">🇺🇸</a>
-  <a href="spain.html">🇪🇸</a>
-  <a href="italy.html">🇮🇹</a>
-  <a href="japan.html">🇯🇵</a>
-  <a href="mexico.html">🇲🇽</a>
+  <a href="france.html">🇫🇷</a>
   <a href="switzerland.html">🇨🇭</a>
+  <a href="italy.html">🇮🇹</a>
+  <a href="spain.html">🇪🇸</a>
+  <a href="japan.html">🇯🇵</a>
+  <a href="norway.html">🇳🇴</a>
+  <a href="mexico.html">🇲🇽</a>
+  <a href="finland.html">🇫🇮</a>
+  <a href="russia.html">🇷🇺</a>
+  <a href="germany.html">🇩🇪</a>
   <a href="aland.html">🇦🇽</a>
   <a href="denmark.html">🇩🇰</a>
-  <a href="finland.html">🇫🇮</a>
   <a href="austria.html">🇦🇹</a>
-  <a href="germany.html">🇩🇪</a>
-  <a href="norway.html">🇳🇴</a>
-  <a href="serbia.html">🇷🇸</a>
  </div>
 
 <div class="grid">
@@ -678,6 +678,734 @@
 
   <div class="photoo stockholm">
     <img src="photos/2017/103.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/179.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/178.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/176.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2016/175.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/174.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2016/173.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/172.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/171.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2016/170.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/169.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2016/168.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/167.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2016/166.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/91.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/90.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/72.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/39.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/38.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/36.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/35.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/34.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/33.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/31.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/30.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/29.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/28.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/27.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/26.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <<img src="photos/2016/25.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/24.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/23.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/22.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/21.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/06.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/05.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/04.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2016/03.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/215.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/214.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/213.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/212.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/211.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/203.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/202.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2015/201.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/200.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2015/199.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/114.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/113.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/112.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/111.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/110.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/109.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/108.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/107.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/106.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/105.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/103.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/102.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/101.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/98.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/93.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/92.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/91.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/90.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/89.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/88.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/87.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/86.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/85.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/84.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/83.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/82.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/80.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/79.jpg">
+  </div> 
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/63.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/62.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/61.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/60.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/59.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/58.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/57.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/56.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/55.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/54.jpg">
+  </div>
+
+  <div class="photoo dalarna">
+    <img src="photos/2015/53.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/52.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/51.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/50.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/49.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/48.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/46.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/45.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/44.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/43.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/42.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/41.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/40.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/39.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/38.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/37.jpg">
+  </div>
+  
+  <div class="photoo stockholm">
+    <img src="photos/2015/36.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/35.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/34.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/33.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/32.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/31.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/30.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/29.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/28.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/27.jpg">
+  </div>
+
+   <div class="photoo stockholm">
+    <img src="photos/2015/14.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/13.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/12.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/02.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2015/01.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/166.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/164.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/163.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/162.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/161.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/160.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/158.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2014/157.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/156.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2014/155.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/154.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/153.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2014/152.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/151.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
+    <img src="photos/2014/150.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/149.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/132.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/131.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/130.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/119.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/118.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/117.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/116.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/115.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/114.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/113.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/112.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/111.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/110.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/109.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/108.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/107.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/106.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/105.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/104.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/103.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/102.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/101.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/100.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/99.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/98.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/97.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/96.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/95.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/94.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/93.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/91.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/90.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/89.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2014/88.jpg">
+  </div>
+
+  <div class="photoo malmo">
+    <img src="photos/2013/25.jpg">
+  </div>
+
+  <div class="photoo malmo">
+    <img src="photos/2013/24.jpg">
+  </div>
+
+  <div class="photoo malmo">
+    <img src="photos/2013/23.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/60.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/59.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/58.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/57.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/56.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/55.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/54.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/53.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/52.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/51.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/50.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/49.jpg">
+  </div>
+
+  <div class="photoo stockholm">
+    <img src="photos/2012/48.jpg">
   </div>
 
   
