--- a/2010.html
+++ b/2010.html
@@ -71,22 +71,22 @@
 
  <div class="countries">
   <a href="sweden.html">🇸🇪</a>
-  <a href="uk.html">🇬🇧</a>
   <a href="hungary.html">🇭🇺</a>
-  <a href="france.html">🇫🇷</a>
+  <a href="uk.html">🇬🇧</a>
   <a href="usa.html">🇺🇸</a>
-  <a href="spain.html">🇪🇸</a>
-  <a href="italy.html">🇮🇹</a>
-  <a href="japan.html">🇯🇵</a>
-  <a href="mexico.html">🇲🇽</a>
+  <a href="france.html">🇫🇷</a>
   <a href="switzerland.html">🇨🇭</a>
+  <a href="italy.html">🇮🇹</a>
+  <a href="spain.html">🇪🇸</a>
+  <a href="japan.html">🇯🇵</a>
+  <a href="norway.html">🇳🇴</a>
+  <a href="mexico.html">🇲🇽</a>
+  <a href="finland.html">🇫🇮</a>
+  <a href="russia.html">🇷🇺</a>
+  <a href="germany.html">🇩🇪</a>
   <a href="aland.html">🇦🇽</a>
   <a href="denmark.html">🇩🇰</a>
-  <a href="finland.html">🇫🇮</a>
   <a href="austria.html">🇦🇹</a>
-  <a href="germany.html">🇩🇪</a>
-  <a href="norway.html">🇳🇴</a>
-  <a href="serbia.html">🇷🇸</a>
  </div>
 
 <div class="grid">
@@ -787,51 +787,51 @@
     <img src="photos/2010/27.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/26.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/25.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/24.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/23.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/22.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/21.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/20.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/19.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/18.jpg">
   </div>
 
-  <div class="photoo ticino">
+  <div class="photoo london">
     <img src="photos/2010/17.jpg">
   </div>
 
-  <div class="photoo strasbourg">
+  <div class="photoo london">
     <img src="photos/2010/16.jpg">
   </div>
 
-  <div class="photoo strasbourg">
+  <div class="photoo london">
     <img src="photos/2010/15.jpg">
   </div>
 
@@ -847,39 +847,39 @@
     <img src="photos/2010/12.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/11.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/10.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/09.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/08.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/07.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/06.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/05.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/04.jpg">
   </div>
 
-  <div class="photoo budapest">
+  <div class="photoo london">
     <img src="photos/2010/03.jpg">
   </div>
 
