--- a/2015.html
+++ b/2015.html
@@ -71,22 +71,22 @@
 
  <div class="countries">
   <a href="sweden.html">🇸🇪</a>
-  <a href="uk.html">🇬🇧</a>
   <a href="hungary.html">🇭🇺</a>
-  <a href="france.html">🇫🇷</a>
+  <a href="uk.html">🇬🇧</a>
   <a href="usa.html">🇺🇸</a>
-  <a href="spain.html">🇪🇸</a>
-  <a href="italy.html">🇮🇹</a>
-  <a href="japan.html">🇯🇵</a>
-  <a href="mexico.html">🇲🇽</a>
+  <a href="france.html">🇫🇷</a>
   <a href="switzerland.html">🇨🇭</a>
+  <a href="italy.html">🇮🇹</a>
+  <a href="spain.html">🇪🇸</a>
+  <a href="japan.html">🇯🇵</a>
+  <a href="norway.html">🇳🇴</a>
+  <a href="mexico.html">🇲🇽</a>
+  <a href="finland.html">🇫🇮</a>
+  <a href="russia.html">🇷🇺</a>
+  <a href="germany.html">🇩🇪</a>
   <a href="aland.html">🇦🇽</a>
   <a href="denmark.html">🇩🇰</a>
-  <a href="finland.html">🇫🇮</a>
   <a href="austria.html">🇦🇹</a>
-  <a href="germany.html">🇩🇪</a>
-  <a href="norway.html">🇳🇴</a>
-  <a href="serbia.html">🇷🇸</a>
  </div>
 
 <div class="grid">
