--- a/1999.html
+++ b/1999.html
@@ -66,7 +66,7 @@
   <a href="2009.html">2009</a>
   <a href="2008.html">2008</a>
   <a href="2007.html">2007</a>
-  <a href="1999.html">1999</a>
+  <a href="1999.html" class="active">1999</a>
  </div>
 
  <div class="countries">
@@ -90,15 +90,10 @@
  </div>
 
 <div class="grid">
-  
-  <div class="photoo vienna">
-    <img src="photos/2015/223.jpg">
+  <h2>This is the first photograph I took on film of my cousin Vadik in Rostov-na-Donu 🇷🇺 in 1999.</h2>
+  <div class="photoo">
+    <img src="photos/1999/01.jpg">
   </div> 
-
-  <div class="photoo vienna">
-    <img src="photos/2015/222.jpg">
-  </div> 
-
 
 
 
