--- a/2007.html
+++ b/2007.html
@@ -67,6 +67,7 @@
   <a href="2009.html">2009</a>
   <a href="2008.html">2008</a>
   <a href="2007.html" class="active">2007</a>
+  <a href="1999.html">1999</a>
  </div>
 
  <div class="countries">
