--- a/norway.html
+++ b/norway.html
@@ -66,6 +66,7 @@
   <a href="2009.html">2009</a>
   <a href="2008.html">2008</a>
   <a href="2007.html">2007</a>
+  <a href="1999.html">1999</a>
  </div>
 
  <div class="countries">
@@ -162,7 +163,7 @@
     <img src="photos/2014/133.jpg">
   </div> 
 
-  
+
 
 
 </div>
