--- a/russia.html
+++ b/russia.html
@@ -66,6 +66,7 @@
   <a href="2009.html">2009</a>
   <a href="2008.html">2008</a>
   <a href="2007.html">2007</a>
+  <a href="1999.html">1999</a>
  </div>
 
  <div class="countries">
@@ -124,6 +125,10 @@
 
   <div class="photoo moscow">
     <img src="photos/2018/123.jpg">
+  </div>
+
+  <div class="photoo rostov">
+    <img src="photos/1999/01.jpg">
   </div>
 
 </div>
