--- a/spain.html
+++ b/spain.html
@@ -66,6 +66,7 @@
   <a href="2009.html">2009</a>
   <a href="2008.html">2008</a>
   <a href="2007.html">2007</a>
+  <a href="1999.html">1999</a>
  </div>
 
  <div class="countries">
@@ -277,7 +278,7 @@
   <div class="photoo catral">
     <img src="photos/2015/64.jpg">
   </div>
-  
+
 
 
 </div>
