--- a/uk.html
+++ b/uk.html
@@ -66,6 +66,7 @@
   <a href="2009.html">2009</a>
   <a href="2008.html">2008</a>
   <a href="2007.html">2007</a>
+  <a href="1999.html">1999</a>
  </div>
 
  <div class="countries">
@@ -405,7 +406,6 @@
   <div class="photoo london">
     <img src="photos/2012/09.jpg">
   </div>
-
 
   <div class="photoo london">
     <img src="photos/2012/07.jpg">
