--- a/france.html
+++ b/france.html
@@ -90,8 +90,84 @@
  </div>
 
 <div class="grid">
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/57.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/58.jpg">
+  </div> 
+
+  <div class="photoo montpellier">
+    <img src="photos/2020/59.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/56.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/55.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/54.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/53.jpg">
+  </div> 
+
+  <div class="photoo montferrier">
+    <img src="photos/2020/52.jpg">
+  </div> 
+
+  <div class="photoo montferrier">
+    <img src="photos/2020/51.jpg">
+  </div> 
+
+  <div class="photoo montferrier">
+    <img src="photos/2020/50.jpg">
+  </div> 
+
+  <div class="photoo montferrier">
+    <img src="photos/2020/49.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/48.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/47.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/46.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/45.jpg">
+  </div> 
+
+  <div class="photoo paris">
+    <img src="photos/2020/44.jpg">
+  </div> 
+
+  <div class="photoo paris">
+    <img src="photos/2020/43.jpg">
+  </div> 
+
+  <div class="photoo paris">
+    <img src="photos/2020/42.jpg">
+  </div> 
+
+  <div class="photoo paris">
+    <img src="photos/2020/41.jpg">
+  </div> 
   
-<div class="photoo paris">
+  <div class="photoo paris">
     <img src="photos/2020/10.jpg">
   </div> 
 
