--- a/index.html
+++ b/index.html
@@ -90,7 +90,131 @@
  </div>
 
 <div class="grid">
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/57.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/58.jpg">
+  </div> 
+
+  <div class="photoo montpellier">
+    <img src="photos/2020/59.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/56.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/55.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/54.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/53.jpg">
+  </div> 
+
+  <div class="photoo montferrier">
+    <img src="photos/2020/52.jpg">
+  </div> 
+
+  <div class="photoo montferrier">
+    <img src="photos/2020/51.jpg">
+  </div> 
+
+  <div class="photoo montferrier">
+    <img src="photos/2020/50.jpg">
+  </div> 
+
+  <div class="photoo montferrier">
+    <img src="photos/2020/49.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/48.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/47.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/46.jpg">
+  </div> 
+
+  <div class="photoo saint-clement-de-riviere">
+    <img src="photos/2020/45.jpg">
+  </div> 
+
+  <div class="photoo paris">
+    <img src="photos/2020/44.jpg">
+  </div> 
+
+  <div class="photoo paris">
+    <img src="photos/2020/43.jpg">
+  </div> 
+
+  <div class="photoo paris">
+    <img src="photos/2020/42.jpg">
+  </div> 
+
+  <div class="photoo paris">
+    <img src="photos/2020/41.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/40.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/39.jpg">
+  </div> 
   
+  <div class="photoo stockholm">
+    <img src="photos/2020/38.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/37.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/36.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/35.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/34.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/33.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/32.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/31.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/30.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/29.jpg">
+  </div> 
+
   <div class="photoo rome">
     <img src="photos/2020/26.jpg">
   </div> 
