--- a/sweden.html
+++ b/sweden.html
@@ -90,7 +90,54 @@
  </div>
 
 <div class="grid">
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/40.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/39.jpg">
+  </div> 
   
+  <div class="photoo stockholm">
+    <img src="photos/2020/38.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/37.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/36.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/35.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/34.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/33.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/32.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/31.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/30.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/29.jpg">
+  </div> 
 
   <div class="photoo stockholm">
     <img src="photos/2020/14.jpg">
