--- a/sweden.html
+++ b/sweden.html
@@ -92,6 +92,114 @@
 <div class="grid">
 
   <div class="photoo stockholm">
+    <img src="photos/2020/84.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/83.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/82.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/81.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/80.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/79.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/78.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/77.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/76.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/75.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/74.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/73.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/72.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/71.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/70.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/69.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/68.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/67.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/66.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/65.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/64.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/63.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/62.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/61.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/60.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/59.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/58.jpg">
+  </div> 
+  
+  <div class="photoo stockholm">
     <img src="photos/2020/40.jpg">
   </div> 
 
