--- a/index.html
+++ b/index.html
@@ -91,6 +91,98 @@
 
 <div class="grid">
 
+  <div class="photoo balaton">
+    <img src="photos/2020/107.jpg">
+  </div> 
+
+  <div class="photoo balaton">
+    <img src="photos/2020/106.jpg">
+  </div> 
+
+  <div class="photoo balaton">
+    <img src="photos/2020/105.jpg">
+  </div> 
+
+  <div class="photoo balaton">
+    <img src="photos/2020/104.jpg">
+  </div> 
+
+  <div class="photoo balaton">
+    <img src="photos/2020/103.jpg">
+  </div> 
+
+  <div class="photoo budapest">
+    <img src="photos/2020/102.jpg">
+  </div> 
+
+  <div class="photoo budapest">
+    <img src="photos/2020/101.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/100.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/99.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/98.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/97.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/96.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/95.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/94.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/93.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/92.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/91.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/90.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/89.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/88.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/87.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/86.jpg">
+  </div> 
+
+  <div class="photoo stockholm">
+    <img src="photos/2020/85.jpg">
+  </div> 
+
   <div class="photoo stockholm">
     <img src="photos/2020/84.jpg">
   </div> 
