--- a/hungary.html
+++ b/hungary.html
@@ -90,8 +90,36 @@
  </div>
 
 <div class="grid">
+
+  <div class="photoo balaton">
+    <img src="photos/2020/107.jpg">
+  </div> 
+
+  <div class="photoo balaton">
+    <img src="photos/2020/106.jpg">
+  </div> 
+
+  <div class="photoo balaton">
+    <img src="photos/2020/105.jpg">
+  </div> 
+
+  <div class="photoo balaton">
+    <img src="photos/2020/104.jpg">
+  </div> 
+
+  <div class="photoo balaton">
+    <img src="photos/2020/103.jpg">
+  </div> 
+
+  <div class="photoo budapest">
+    <img src="photos/2020/102.jpg">
+  </div> 
+
+  <div class="photoo budapest">
+    <img src="photos/2020/101.jpg">
+  </div> 
   
-<div class="photoo budapest">
+  <div class="photoo budapest">
     <img src="photos/2019/52.jpg">
   </div> 
 
