--- a/30.html
+++ b/30.html
@@ -9,6 +9,16 @@
 <meta name="keywords" content="front-end development, photography, web development">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <meta property="og:image" content="xenerrdotcom.png"/>
+<style>
+.photoo {
+  width: 100%;
+  margin:0 auto;
+  max-width: 2000px;
+}
+.catalog {
+  padding: 15px;
+}
+</style>
 </head>
 
 
