--- a/italy.html
+++ b/italy.html
@@ -90,8 +90,72 @@
  </div>
 
 <div class="grid">
+
+    <div class="photoo siena">
+    <img src="photos/2020/149.jpg">
+  </div> 
+
+  <div class="photoo siena">
+    <img src="photos/2020/148.jpg">
+  </div> 
+
+  <div class="photoo siena">
+    <img src="photos/2020/147.jpg">
+  </div> 
+
+  <div class="photoo florence">
+    <img src="photos/2020/150.jpg">
+  </div> 
+
+  <div class="photoo florence">
+    <img src="photos/2020/146.jpg">
+  </div> 
+
+  <div class="photoo florence">
+    <img src="photos/2020/145.jpg">
+  </div> 
+
+  <div class="photoo chianti">
+    <img src="photos/2020/144.jpg">
+  </div> 
+
+  <div class="photoo chianti">
+    <img src="photos/2020/143.jpg">
+  </div> 
+
+  <div class="photoo chianti">
+    <img src="photos/2020/142.jpg">
+  </div> 
+
+  <div class="photoo chianti">
+    <img src="photos/2020/141.jpg">
+  </div> 
+
+  <div class="photoo chianti">
+    <img src="photos/2020/140.jpg">
+  </div> 
+
+  <div class="photoo chianti">
+    <img src="photos/2020/139.jpg">
+  </div> 
+
+  <div class="photoo chianti">
+    <img src="photos/2020/138.jpg">
+  </div> 
+
+  <div class="photoo levanto">
+    <img src="photos/2020/137.jpg">
+  </div> 
+
+  <div class="photoo genoa">
+    <img src="photos/2020/136.jpg">
+  </div> 
+
+  <div class="photoo genoa">
+    <img src="photos/2020/135.jpg">
+  </div> 
   
-<div class="photoo rome">
+  <div class="photoo rome">
     <img src="photos/2020/26.jpg">
   </div> 
 
