--- a/france.html
+++ b/france.html
@@ -91,6 +91,34 @@
 
 <div class="grid">
 
+  <div class="photoo aubrac">
+    <img src="photos/2020/166.jpg">
+  </div> 
+
+  <div class="photoo aubrac">
+    <img src="photos/2020/165.jpg">
+  </div> 
+
+  <div class="photoo drome">
+    <img src="photos/2020/164.jpg">
+  </div> 
+
+  <div class="photoo drome">
+    <img src="photos/2020/163.jpg">
+  </div> 
+
+  <div class="photoo drome">
+    <img src="photos/2020/162.jpg">
+  </div> 
+
+  <div class="photoo drome">
+    <img src="photos/2020/161.jpg">
+  </div> 
+
+  <div class="photoo drome">
+    <img src="photos/2020/160.jpg">
+  </div> 
+
   <div class="photoo cassis">
     <img src="photos/2020/159.jpg">
   </div> 
